Flag as abuse is now sticky: 	- modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.special.css: 		- Flag as abuse link, when the comment is marked abusive, should turn 		  red as stated in comments 	- modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.special.js: 		- Updated setBinds() to give the abuse flag its own function, which 		  toggles the flag based on what the user has already done 		- Updated flagFeedback() to switch the feedback link back and forth 		  between the saved and available text, and to handle marking it as abusive 		- Updated loadFeedback() to update the text of the link if the user has 		  already flagged the comment as abuse 	- ArticleFeedbackv5.php: 		- New config variable $wgArticleFeedbackv5AbusiveThreshold 	- api/ApiFlagFeedbackArticleFeedbackv5.php: 		- Updated to send the abuse count as well as the abusive state, and to 		  use $wgArticleFeedbackv5AbusiveThreshold rather than a hardcoded value 	- api/ApiViewFeedbackArticleFeedbackv5.php: 		- Updated renderFeedback() to set the abusive class on the link if the 		  count is above $wgArticleFeedbackv5AbusiveThreshold 		- Also fixed whitespace 	- ArticleFeedbackv5.hooks.php: 		- Updated to send 'articlefeedbackv5-form-abuse' to the special page js

--- a/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.special.css
+++ b/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.special.css
@@ -210,6 +210,9 @@ a#articleFeedbackv5-show-more {
 #articleFeedbackv5-show-feedback .articleFeedbackv5-abuse-link {
 	margin-left: 150px;
 }
+#articleFeedbackv5-show-feedback .articleFeedbackv5-abuse-link.abusive {
+	color: red;
+}
 #articleFeedbackv5-show-feedback .articleFeedbackv5-comment-foot {
 	line-height: 22px;
 	float: left;
